#125: adds audit log
